--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			name="description"
 			content="Web site created using create-react-app"
 		/>
+		<script src="https://cdn.tiny.cloud/1/e86grua6u9ohdweymazeqijul4al5z3nz48ddgn1t6vhw792/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 		<link rel="apple-touch-icon" href="/logo192.png" />
 
 		<link rel="manifest" href="/manifest.json" />
