remove unused package and add type=module for tinyMCE

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script
 			src="https://cdn.tiny.cloud/1/e86grua6u9ohdweymazeqijul4al5z3nz48ddgn1t6vhw792/tinymce/5/tinymce.min.js"
 			referrerpolicy="origin"
+			type="module"
 		></script>
 		<link rel="apple-touch-icon" href="/logo192.png" />
 
